# imgui_bgfx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md
cmake/: add_libs.cmake
example/: CMakeLIsts.txt  frag.h  main.cpp  main_.cpp  shaderCompile.bat  varying.def.sc  vert.h  vert.sc
imgui_bgfx_backend/: CMakeLists.txt
imgui_bgfx_backend/backends/: imgui_impl_bgfx.cpp  imgui_impl_bgfx.h
